--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ eth-keys==0.3.3
 eth-rlp==0.2.1
 eth-typing==2.2.2
 eth-utils==1.10.0
+gunicorn==19.9.0
 hexbytes==0.2.2
 idna==3.3
 ipfshttpclient==0.8.0a2
