--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ multidict==5.2.0
 netaddr==0.8.0
 parsimonious==0.8.1
 protobuf==3.19.1
-psycopg2==2.9.1
+psycopg2-binary==2.9.3
 pycryptodome==3.11.0
 pyrsistent==0.18.0
 pytz==2021.3
