--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==2.0.7
 cytoolz==0.11.0
 Django==3.2.8
 djangorestframework==3.12.4
+djangorestframework-camel-case==1.3.0
 eth-abi==2.1.1
 eth-account==0.5.6
 eth-hash==0.3.2
