--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ chardet==4.0.0
 charset-normalizer==2.0.7
 cytoolz==0.11.0
 Django==3.2.8
+django-filter==21.1
 djangorestframework==3.12.4
 djangorestframework-camel-case==1.3.0
 eth-abi==2.1.1
